[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std ={version="1",features=["std","attributes","tokio1"]}
tokio={version="1",features=["full"]}
anyhow = "1"
rlimit = "0.8.3"
smol="1"
async-net = "1.4.3"
async-executor="1.4.1"
easy-parallel = "3"
async-channel = "1.4.1"
futures-lite={version="1"}